# mcpw

./: .gitignore  README.md  pyproject.toml
src/mcpw/: cli.py  config.py  copilot_runner.py  instructions.py  session_log.py  telemetry.py
tests/: test_cli.py  test_config.py  test_copilot_runner.py  test_session_log.py  test_telemetry.py
