[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpw"
version = "0.1.0"
description = "A command-line wrapper for Copilot CLI with session logging"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
# This makes `mcpw` available as a command after `pip install -e .`
mcpw = "mcpw.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]
